# qwc-admin-gui

./: .dockerignore  Dockerfile  README.md  access_control.py  pyproject.toml  requirements.txt  server.py  updateTranslations.py  utils.py
.github/workflows/: main.yml
controllers/: __init__.py  controller.py  groups_controller.py  permissions_controller.py  registrable_groups_controller.py  registration_requests_controller.py  resources_controller.py  roles_controller.py  users_controller.py
forms/: __init__.py  group_form.py  permission_form.py  registrable_group_form.py  registration_request_form.py  resource_form.py  role_form.py  user_form.py
plugins/alkis/: README.md  __init__.py
plugins/themes/: README.md  __init__.py
schemas/: qwc-admin-gui.json
src/: access_control.py  admin_sections.py  server.py  updateTranslations.py  utils.py
src/controllers/: controller.py  groups_controller.py  permissions_controller.py  registrable_groups_controller.py  registration_requests_controller.py  resources_controller.py  roles_controller.py  users_controller.py
src/forms/: __init__.py  group_form.py  permission_form.py  registrable_group_form.py  registration_request_form.py  resource_form.py  role_form.py  user_form.py
src/templates/: access_denied.html  base.html  base_index.html  home.html
src/translations/: ca.json  de.json  en.json  es.json  fr.json  tsconfig.json
static/css/: application.css  bootstrap-chosen.css  multi-select.css
static/js/: jquery.multi-select.js
templates/: base.html  base_index.html  home.html
translations/: de.json
(+114 files in other folders)
