[project]
name = "qwc-admin-gui"
version = "v2026.01.05"
description = "QWC Admin GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Bootstrap-Flask~=2.5.0",
    "Flask-JWT-Extended~=4.7.0",
    "Flask-Mail2~=1.0.2",
    "Flask-WTF~=1.2.1",
    "Flask-Login~=0.6.3",
    "psycopg2~=2.9.9",
    "requests~=2.32.0",
    "SQLAlchemy~=2.0.29",
    "Werkzeug~=3.1.4",
    "email_validator~=2.3.0",
    "qwc-services-core~=1.5.0",
    "python-i18n~=0.3.9",
    "deepmerge~=2.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
